--- a/staging/buds/index.html
+++ b/staging/buds/index.html
@@ -6,73 +6,100 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" href="style.css" />
-    <!-- Bootstrap CDN -->
+    <title>Echo Buds Animated Digital</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
-    <title>*~*~'`wElCuM 2 dA bAnNeR z0ne`'~*~*</title>
   </head>
   <body>
-    <div class="container">
-      <button
-        type="button"
-        class="btn btn-primary btn-block btn-lg"
-        type="button"
-        data-toggle="collapse"
-        data-target="#collapseExample"
-        aria-expanded="false"
-        aria-controls="collapseExample"
-      >
-        Seattle Aquarium
-      </button>
-      <div class="collapse" id="collapseExample">
-        <iframe
-          width="300px"
-          height="250px"
-          src="SEAQUA_A_3x25/index.html"
-          frameborder="0"
-        ></iframe>
-        <iframe
-          width="160px"
-          height="600px"
-          src="SEAQUA_A_16x6/index.html"
-          frameborder="0"
-        ></iframe>
-        <iframe
-          width="320px"
-          height="50px"
-          src="SEAQUA_A_32x5/index.html"
-          frameborder="0"
-        ></iframe>
-        <iframe
-          width="728px"
-          height="90px"
-          src="SEAQUA_A_72x9/index.html"
-          frameborder="0"
-        ></iframe>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg"></div>
+        <div class="col-lg-6 bg-light h-100">
+          <h2 class="text-center pt-4">Echo Buds – Banners</h2>
+        </div>
+        <div class="col-lg"></div>
+      </div>
+      <div class="row">
+        <div class="col-lg"></div>
+        <div class="col-lg-3 bg-light pt-4">
+          <p class="text-center"><strong>Animated</strong></p>
+          <ul>
+            <li>
+              <a href="ECHOB24_Anim_300x250/index.html">300x250</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="ECHOB21_Anim_728x90/index.html">728x90</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="ECHOB20_Anim_160x600/index.html">160x600</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="ECHOB23_Anim_970x250/index.html">970x250</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="ECHOB22_Anim_300x600/index.html">300x600</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="ECHOB25_Anim_320x50/index.html">320x50</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg-3 bg-light pt-4">
+          <p class="text-center"><strong>Static</strong></p>
+          <ul>
+            <li>
+              <a href="statics/ECHOB18_Static_600x500.jpg">300x250</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="statics/ECHOB19_Static_1456x180.jpg">728x90</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="statics/ECHOB14_Static_160x600.jpg">160x600</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="statics/ECHOB16_Static_970x250.jpg">970x250</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="statics/ECHOB15_Static_300x600.jpg">300x600</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="statics/ECHOB17_Static_640x100.jpg">320x50</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="col-lg"></div>
+      </div>
+      <div class="row">
+        <div class="col-lg"></div>
+        <div class="col-lg-6 bg-light h-100">
+        <div class="col-lg"></div>
       </div>
     </div>
-    <script>
-      var coll = document.getElementsByClassName("collapsible");
-      var i;
-
-      for (i = 0; i < coll.length; i++) {
-        coll[i].addEventListener("click", function () {
-          this.classList.toggle("active");
-          var content = this.nextElementSibling;
-          if (content.style.maxHeight) {
-            content.style.maxHeight = null;
-          } else {
-            content.style.maxHeight = content.scrollHeight + "px";
-          }
-        });
-      }
-    </script>
-    <!-- jQuery and Bootstrap Bundle (includes Popper) -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
