--- a/staging/buds/ECHOB25_Anim_320x50/index.html
+++ b/staging/buds/ECHOB25_Anim_320x50/index.html
@@ -26,6 +26,9 @@
         <div id="copy2" class="set">
           <img src="images/copy2.png" width="320px" height="50px" />
         </div>
+        <div id="copy3" class="set">
+          <img src="images/copy3.png" width="320px" height="50px" />
+        </div>
         <div id="highlight" class="set">
           <img src="images/highlight.png" width="320px" height="50px" />
         </div>
@@ -120,14 +123,19 @@
             { x: -15, autoAlpha: 0, scale: 1.2, ease: "power2.inOut" },
             "-=.4"
           )
-          .to(["#buds"], 1, { x: -105, ease: "power2.inOut" }, "-=1")
+          .to(
+            ["#buds"],
+            1,
+            { x: -130, scale: 0.85, ease: "power2.inOut" },
+            "-=1"
+          )
           .to(
             "#highlight",
             0.75,
             { autoAlpha: 1, ease: "power2.inOut" },
             "-=.6"
           )
-          .from(["#price"], 1, {
+          .from(["#copy3", "#price"], 1, {
             x: -15,
             scale: 1.2,
             ease: "power3.out",
