--- a/staging/buds/index.html
+++ b/staging/buds/index.html
@@ -29,7 +29,7 @@
           <p class="text-center"><strong>Animated</strong></p>
           <ul>
             <li>
-              <a href="ECHOB24_Anim_300x250/index.html">300x250</a>
+              <a href="ECHOB24_Anim_300x250/index.html">300x250 – Updated Product Art</a>
             </li>
           </ul>
           <ul>
@@ -62,7 +62,7 @@
           <p class="text-center"><strong>Static</strong></p>
           <ul>
             <li>
-              <a href="statics/ECHOB18_Static_600x500.jpg">300x250</a>
+              <a href="statics/ECHOB18_Static_600x500.jpg">300x250 – Updated Product Art</a>
             </li>
           </ul>
           <ul>
