--- a/staging/buds-priceupdate/index.html
+++ b/staging/buds-priceupdate/index.html
@@ -33,7 +33,7 @@
             </li>
           </ul>
           <ul>
-            <!-- <li>
+            <li>
               <a href="ECHOB21_Anim_728x90/index.html">728x90</a>
             </li>
           </ul>
@@ -56,7 +56,7 @@
             <li>
               <a href="ECHOB25_Anim_320x50/index.html">320x50</a>
             </li> 
-          </ul>-->
+          </ul>
         </div>
         <div class="col-lg-3 bg-light pt-4">
           <p class="text-center"><strong>Static</strong></p>
@@ -65,9 +65,9 @@
               <a href="statics/ECHOB18_Static_600x500.jpg">600x500 (appears as 300x250)</a>
             </li>
           </ul>
-          <!-- <ul>
+          <ul>
             <li>
-              <a href="statics/ECHOB19_Static_1456x180.jpg">728x90</a>
+              <a href="statics/ECHOB19_Static_1456x180.jpg">1456x180 (appears as 728x90)</a>
             </li>
           </ul>
           <ul>
@@ -87,9 +87,9 @@
           </ul>
           <ul>
             <li>
-              <a href="statics/ECHOB17_Static_640x100.jpg">320x50</a>
+              <a href="statics/ECHOB17_Static_640x100.jpg">640x100 (appears as 320x50)</a>
             </li>
-          </ul> -->
+          </ul>
         </div>
 
         <div class="col-lg"></div>
