--- a/staging/buds-priceupdate/index.html
+++ b/staging/buds-priceupdate/index.html
@@ -90,7 +90,11 @@
               <a href="statics/ECHOB17_Static_640x100.jpg">640x100 (appears as 320x50)</a>
             </li>
           </ul>
-        </div>
+          <ul>
+            <li>
+              <a href="statics/ECHOB16_Static_1920x1080.jpg">1920x1080</a>
+            </li>
+          </ul>        </div>
 
         <div class="col-lg"></div>
       </div>
