--- a/staging/frames/ECHOF_TPR_Anim_320x50/index.html
+++ b/staging/frames/ECHOF_TPR_Anim_320x50/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="ad.size" content="width=320,height=50" />
-    <title>Echo Frames NP 320x50</title>
+    <title>Echo Frame TPR 320x50</title>
     <link rel="stylesheet" href="style.css" />
     <!-- Greensock -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
@@ -37,8 +37,14 @@
         <div id="copy3" class="set">
           <img src="images/copy3.png" width="320px" height="50px" alt="" />
         </div>
-        <div id="cta" class="set">
-          <img src="images/cta.png" width="320px" height="50px" alt="" />
+        <div id="price1" class="set">
+          <img src="images/price1.png" width="320px" height="50px" alt="" />
+        </div>
+        <div id="slash" class="set">
+          <img src="images/slash.png" width="320px" height="50px" alt="" />
+        </div>
+        <div id="price2" class="set">
+          <img src="images/price2.png" width="320px" height="50px" alt="" />
         </div>
         <div id="logo" class="set">
           <img src="images/logo.png" width="320px" height="50px" alt="" />
@@ -52,7 +58,7 @@
       //Animation timelines
       function fadeIn() {
         var tl = gsap.timeline({ id: "fadeIn" });
-        tl.from(["#frameWrapper", "#frame", "#shadow", "#bg"], 0.25, {
+        tl.from(["#frameWrapper", "#frame", "#shadow", "#bg", "#slash"], 0.25, {
           autoAlpha: 0,
         });
         return tl;
@@ -113,11 +119,40 @@
         var tl = gsap.timeline({ id: "frameMove" });
         tl.to(["#frameWrapper"], 1, {
           scale: 0.85,
-          x: 35,
+          x: -30,
           y: -3,
         });
         return tl;
       }
+
+      function price() {
+        var tl = gsap.timeline({ id: "price" });
+        tl.from(["#price1"], 1, {
+          x: -15,
+          autoAlpha: 0,
+          ease: "power2.inOut",
+        })
+          .from(
+            "#slash",
+            0.75,
+            {
+              clip: "rect(0, 250px, 50px, 250px)",
+            },
+            "-=.4"
+          )
+          .from(
+            "#price2",
+            0.75,
+            {
+              scale: 0,
+              autoAlpha: 0,
+            },
+            "-=.5"
+          );
+
+        return tl;
+      }
+
       function endframe() {
         var tl = gsap.timeline({ id: "endframe" });
         tl.to(["#copy2"], 0.5, { x: 15, autoAlpha: 0 })
@@ -145,7 +180,8 @@
           .add(copy1(), 0.8)
           .add(copy2(), 3.25)
           .add(frameMove(), 5.5)
-          .add(endframe(), 5.25);
+          .add(endframe(), 5.25)
+          .add(price(), 6.75);
       };
     </script>
   </body>
