--- a/staging/frames/index.html
+++ b/staging/frames/index.html
@@ -55,19 +55,23 @@
           <ul>
             <li>
               <a href="ECHOF_Anim_320x50/index.html">320x50</a>
-            </li> 
+            </li>
           </ul>
         </div>
         <div class="col-lg-3 bg-light pt-4">
           <p class="text-center"><strong>Non-TPR Static</strong></p>
           <ul>
             <li>
-              <a href="statics/ECHOF_Static_600x500.jpg">600x500 (appears as 300x250)</a>
+              <a href="statics/ECHOF_Static_600x500.jpg"
+                >600x500 (appears as 300x250)</a
+              >
             </li>
           </ul>
           <ul>
             <li>
-              <a href="statics/ECHOF_Static_1456x180.jpg">1456x180 (appears as 728x90)</a>
+              <a href="statics/ECHOF_Static_1456x180.jpg"
+                >1456x180 (appears as 728x90)</a
+              >
             </li>
           </ul>
           <ul>
@@ -87,16 +91,90 @@
           </ul>
           <ul>
             <li>
-              <a href="statics/ECHOF_Static_640x100.jpg">640x100 (appears as 320x50)</a>
+              <a href="statics/ECHOF_Static_640x100.jpg"
+                >640x100 (appears as 320x50)</a
+              >
             </li>
           </ul>
-     </div>
+        </div>
 
         <div class="col-lg"></div>
       </div>
       <div class="row">
         <div class="col-lg"></div>
-        <div class="col-lg-6 bg-light h-100">
+        <div class="col-lg-3 bg-light pt-4">
+          <p class="text-center"><strong>TPR Animated</strong></p>
+          <ul>
+            <li>
+              <a href="ECHOF_TPR_Anim_300x250/index.html">300x250</a>
+            </li>
+          </ul>
+          <!-- <ul>
+            <li>
+              <a href="ECHOF_TPR_Anim_728x90/index.html">728x90</a>
+            </li>
+          </ul> -->
+          <ul>
+            <li>
+              <a href="ECHOF_TPR_Anim_160x600/index.html">160x600</a>
+            </li>
+          </ul>
+          <!-- <ul>
+            <li>
+              <a href="ECHOF_TPR_Anim_970x250/index.html">970x250</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="ECHOF_TPR_Anim_300x600/index.html">300x600</a>
+            </li>
+          </ul> -->
+          <ul>
+            <li>
+              <a href="ECHOF_TPR_Anim_320x50/index.html">320x50</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg-3 bg-light pt-4">
+          <p class="text-center"><strong>TPR Static</strong></p>
+          <ul>
+            <li>
+              <a href="statics/ECHOF_TPR_Static_600x500.jpg"
+                >600x500 (appears as 300x250)</a
+              >
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="statics/ECHOF_TPR_Static_1456x180.jpg"
+                >1456x180 (appears as 728x90)</a
+              >
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="statics/ECHOF_TPR_Static_160x600.jpg">160x600</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="statics/ECHOF_TPR_Static_970x250.jpg">970x250</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="statics/ECHOF_TPR_Static_300x600.jpg">300x600</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="statics/ECHOF_TPR_Static_640x100.jpg"
+                >640x100 (appears as 320x50)</a
+              >
+            </li>
+          </ul>
+        </div>
+
         <div class="col-lg"></div>
       </div>
     </div>
