--- a/staging/frames/ECHOF_TPR_Anim_300x250/index.html
+++ b/staging/frames/ECHOF_TPR_Anim_300x250/index.html
@@ -161,7 +161,7 @@
         main
           .add(fadeIn())
           .add(frame())
-          .add(shadowMove(), 0.8)
+          // .add(shadowMove(), 0.8)
           .add(copy1(), 0.8)
           .add(copy2(), 3.25)
           .add(endframe(), 5.5)
