--- a/staging/frames/ECHOF_TPR_Anim_160x600/index.html
+++ b/staging/frames/ECHOF_TPR_Anim_160x600/index.html
@@ -77,6 +77,9 @@
         <div id="logo" class="set">
           <img src="images/logo.png" width="160px" height="600px" alt="" />
         </div>
+        <div id="legal" class="set">
+          <img src="images/legal.png" width="160px" height="600px" alt="" />
+        </div>
       </div>
     </div>
     <script>
@@ -204,7 +207,11 @@
               autoAlpha: 0,
             },
             "-=.5"
-          );
+          )
+          .from("#legal", 0.5, {
+            y: -5,
+            autoAlpha: 0,
+          });
 
         return tl;
       }
