--- a/staging/frames/ECHOF_TPR_Anim_320x50/index.html
+++ b/staging/frames/ECHOF_TPR_Anim_320x50/index.html
@@ -49,6 +49,9 @@
         <div id="logo" class="set">
           <img src="images/logo.png" width="320px" height="50px" alt="" />
         </div>
+        <div id="legal" class="set">
+          <img src="images/legal.png" width="320px" height="50px" alt="" />
+        </div>
       </div>
     </div>
     <script>
@@ -119,8 +122,8 @@
         var tl = gsap.timeline({ id: "frameMove" });
         tl.to(["#frameWrapper"], 1, {
           scale: 0.85,
-          x: -30,
-          y: -3,
+          x: -32,
+          y: -2,
         });
         return tl;
       }
@@ -156,14 +159,14 @@
       function endframe() {
         var tl = gsap.timeline({ id: "endframe" });
         tl.to(["#copy2"], 0.5, { x: 15, autoAlpha: 0 })
-          .from(["#logo", "#cta"], 1, {
-            y: -15,
+          .from(["#logo", "#legal", "#cta"], 1, {
+            x: -10,
             autoAlpha: 0,
             ease: "power2.inOut",
             stagger: ".33",
           })
           .from(
-            "#copy3",
+            ["#copy3"],
             1,
             { x: -15, autoAlpha: 0, ease: "power2.inOut" },
             "-=.66"
