--- a/staging/frames/ECHOF_TPR_Anim_300x600/index.html
+++ b/staging/frames/ECHOF_TPR_Anim_300x600/index.html
@@ -49,6 +49,9 @@
         <div id="logo" class="set">
           <img src="images/logo.png" width="300px" height="600px" alt="" />
         </div>
+        <div id="legal" class="set">
+          <img src="images/legal.png" width="300px" height="600px" alt="" />
+        </div>
       </div>
     </div>
     <script>
@@ -145,7 +148,11 @@
               autoAlpha: 0,
             },
             "-=.5"
-          );
+          )
+          .from("#legal", 0.5, {
+            x: -5,
+            autoAlpha: 0,
+          });
 
         return tl;
       }
