Initial social build

--- a/staging/frames/index.html
+++ b/staging/frames/index.html
@@ -177,6 +177,89 @@
 
         <div class="col-lg"></div>
       </div>
+      <div class="row">
+        <div class="col-lg"></div>
+        <div class="col-lg-3 bg-light pt-4">
+          <p class="text-center"><strong>Social Animated</strong></p>
+          <ul>
+            <li>TPR In-Feed GIF</li>
+          </ul>
+          <ul>
+            <li>Non-TPR In-Feed GIF</li>
+          </ul>
+        </div>
+        <div class="col-lg-3 bg-light pt-4">
+          <p class="text-center"><strong>Social Static</strong></p>
+          <ul>
+            <li>
+              <a href="social/ECHOF_Non-TPR_In-Feed_Static_A.jpg"
+                >Non-TPR In-Feed Static A</a
+              >
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="social/ECHOF_TPR_In-Feed_Static_B.jpg"
+                >TPR In-Feed Static B</a
+              >
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="social/ECHOF_Story_Non-TPR_A.jpg">Non-TPR Story A</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="social/ECHOF_Story_TPR_B.jpg">TPR Story B</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="social/ECHOF_Story-Multi_TPR_F1.jpg"
+                >TPR Multi-Story Frame 1</a
+              >
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="social/ECHOF_Story-Multi_TPR_F2.jpg"
+                >TPR Multi-Story Frame 2</a
+              >
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="social/ECHOF_Story-Multi_TPR_F3.jpg"
+                >TPR Multi-Story Frame 3</a
+              >
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="social/ECHOF_Story-Multi_Non-TPR_F1.jpg"
+                >Non-TPR Multi-Story Frame 1</a
+              >
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="social/ECHOF_Story-Multi_Non-TPR_F2.jpg"
+                >Non-TPR Multi-Story Frame 2</a
+              >
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="social/ECHOF_Story-Multi_Non-TPR_F3.jpg"
+                >Non-TPR Multi-Story Frame 3</a
+              >
+            </li>
+          </ul>
+        </div>
+
+        <div class="col-lg"></div>
+      </div>
     </div>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
