Initial animated social

--- a/staging/frames/index.html
+++ b/staging/frames/index.html
@@ -182,10 +182,18 @@
         <div class="col-lg-3 bg-light pt-4">
           <p class="text-center"><strong>Social Animated</strong></p>
           <ul>
-            <li>TPR In-Feed GIF</li>
+            <li>
+              <a href="social/ECHOF_Social_TPR_In-Feed_GIF.mp4"
+                >TPR In-Feed GIF</a
+              >
+            </li>
           </ul>
           <ul>
-            <li>Non-TPR In-Feed GIF</li>
+            <li>
+              <a href="social/ECHOF_Social_Non-TPR_In-Feed_GIF.mp4"
+                >Non-TPR In-Feed GIF</a
+              >
+            </li>
           </ul>
         </div>
         <div class="col-lg-3 bg-light pt-4">
