--- a/staging/schweitzer/index.html
+++ b/staging/schweitzer/index.html
@@ -27,162 +27,71 @@
         <div class="col-lg"></div>
         <div class="col-lg-3 bg-light pt-4">
           <p class="text-center">
-            <strong>Prospecting Concept 1 Animated</strong>
+            <strong>Prospecting Concept 1</strong>
           </p>
           <ul>
             <li>
               <a href="SCHW_Prosp1_Anim_300x250/index.html">300x250</a>
             </li>
           </ul>
-          <!-- <ul>
+          <ul>
             <li>
-              <a href="ECHOF_Anim_728x90/index.html">728x90</a>
+              <a href="SCHW_Prosp1_Anim_728x90/index.html">728x90</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="ECHOF_Anim_160x600/index.html">160x600</a>
+              <a href="SCHW_Prosp1_Anim_160x600/index.html">160x600</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="ECHOF_Anim_970x250/index.html">970x250</a>
+              <a href="SCHW_Prosp1_Anim_300x600/index.html">300x600</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="ECHOF_Anim_300x600/index.html">300x600</a>
+              <a href="SCHW_Prosp1_Anim_320x50/index.html">320x50</a>
             </li>
           </ul>
-          <ul>
-            <li>
-              <a href="ECHOF_Anim_320x50/index.html">320x50</a>
-            </li>
-          </ul> -->
+
         </div>
         <div class="col-lg-3 bg-light pt-4">
           <p class="text-center">
-            <strong>Prospecting Concept 1 Static</strong>
+            <strong>Prospecting Concept 2</strong>
           </p>
           <ul>
             <li>
-              <a href="statics/Weschud_StaticA_600x500.jpg"
-                >600x500 (appears as 300x250)</a
-              >
-            </li>
-          </ul>
-          <!-- <ul>
-            <li>
-              <a href="statics/ECHOF_Static_1456x180.jpg"
-                >1456x180 (appears as 728x90)</a
+              <a href="SCHW_Prosp2_Anim_300x250/index.html"
+                >300x250</a
               >
             </li>
           </ul>
           <ul>
             <li>
-              <a href="statics/ECHOF_Static_160x600.jpg">160x600</a>
+              <a href="SCHW_Prosp2_Anim_728x90/index.html">728x90</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="statics/ECHOF_Static_970x250.jpg">970x250</a>
+              <a href="SCHW_Prosp2_Anim_160x600/index.html">160x600</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="statics/ECHOF_Static_300x600.jpg">300x600</a>
+              <a href="SCHW_Prosp2_Anim_300x600/index.html">300x600</a>
             </li>
-          </ul>
+          </ul>    
           <ul>
             <li>
-              <a href="statics/ECHOF_Static_640x100.jpg"
-                >640x100 (appears as 320x50)</a
-              >
+              <a href="SCHW_Prosp2_Anim_320x50/index.html">320x50</a>
             </li>
-          </ul> -->
+          </ul>
         </div>
 
         <div class="col-lg"></div>
       </div>
 
-      <div class="row">
-        <div class="col-lg"></div>
-        <div class="col-lg-3 bg-light pt-4">
-          <p class="text-center">
-            <strong>Prospecting Concept 2 Animated</strong>
-          </p>
-          <ul>
-            <li>
-              <a href="SCHW_Prosp2_Anim_300x250/index.html">300x250</a>
-            </li>
-          </ul>
-          <!-- <ul>
-            <li>
-              <a href="ECHOF_Anim_728x90/index.html">728x90</a>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="ECHOF_Anim_160x600/index.html">160x600</a>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="ECHOF_Anim_970x250/index.html">970x250</a>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="ECHOF_Anim_300x600/index.html">300x600</a>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="ECHOF_Anim_320x50/index.html">320x50</a>
-            </li>
-          </ul> -->
-        </div>
-        <div class="col-lg-3 bg-light pt-4">
-          <p class="text-center">
-            <strong>Prospecting Concept 2 Static</strong>
-          </p>
-          <ul>
-            <li>
-              <a href="statics/Weschud_StaticB_600x500.jpg"
-                >600x500 (appears as 300x250)</a
-              >
-            </li>
-          </ul>
-          <!-- <ul>
-            <li>
-              <a href="statics/ECHOF_Static_1456x180.jpg"
-                >1456x180 (appears as 728x90)</a
-              >
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="statics/ECHOF_Static_160x600.jpg">160x600</a>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="statics/ECHOF_Static_970x250.jpg">970x250</a>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="statics/ECHOF_Static_300x600.jpg">300x600</a>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="statics/ECHOF_Static_640x100.jpg"
-                >640x100 (appears as 320x50)</a
-              >
-            </li>
-          </ul> -->
-        </div>
 
         <div class="col-lg"></div>
       </div>
