--- a/staging/frames-priceupdate/index.html
+++ b/staging/frames-priceupdate/index.html
@@ -19,7 +19,7 @@
       <div class="row">
         <div class="col-lg"></div>
         <div class="col-lg-6 bg-light h-100">
-          <h2 class="text-center pt-4">Echo Frames</h2>
+          <h2 class="text-center pt-4">Echo Frames – Price Update</h2>
         </div>
         <div class="col-lg"></div>
       </div>
