--- a/staging/schweitzer/index.html
+++ b/staging/schweitzer/index.html
@@ -92,7 +92,74 @@
         <div class="col-lg"></div>
       </div>
 
+      <div class="row">
+        <div class="col-lg"></div>
+        <div class="col-lg-3 bg-light pt-4">
+          <p class="text-center">
+            <strong>Retargeting Concept 1</strong>
+          </p>
+          <ul>
+            <li>
+              <a href="SCHW_RT1_Anim_300x250/index.html">300x250</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="SCHW_RT1_Anim_728x90/index.html">728x90</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="SCHW_RT1_Anim_160x600/index.html">160x600</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="SCHW_RT1_Anim_300x600/index.html">300x600</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="SCHW_RT1_Anim_320x50/index.html">320x50</a>
+            </li>
+          </ul>
 
+        </div>
+        <div class="col-lg-3 bg-light pt-4">
+          <p class="text-center">
+            <strong>Retargeting Concept 2</strong>
+          </p>
+          <!-- <ul>
+            <li>
+              <a href="SCHW_RT2_Anim_300x250/index.html"
+                >300x250</a
+              >
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="SCHW_RT2_Anim_728x90/index.html">728x90</a>
+            </li>
+          </ul> -->
+          <ul>
+            <li>
+              <a href="SCHW_RT2_Anim_160x600/index.html">160x600</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="SCHW_RT2_Anim_300x600/index.html">300x600</a>
+            </li>
+          </ul>    
+          <!-- <ul>
+            <li>
+              <a href="SCHW_RT2_Anim_320x50/index.html">320x50</a>
+            </li>
+          </ul> -->
+        </div>
+
+        <div class="col-lg"></div>
+      </div>
         <div class="col-lg"></div>
       </div>
     </div>
